fix weird bouncing if the player moves over the ball while it's behind the paddle, but before the score zone

--- a/src/game/style.css
+++ b/src/game/style.css
@@ -51,11 +51,6 @@ body {
   margin-top: 500px;
 }
 
-canvas {
-  border-left: 5px solid #eee;
-  border-right: 5px solid #eee;
-}
-
 hr {
   margin: 30px 50px;
   border: 1px solid rgb(156, 156, 156);
